Added alt text to image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</div>
 
     </form>
-       <img style="margin-top:3em;width: 100%" src="images/foundations_logo_no_vertical.png">
+       <img alt="Foundations for Research Computing logo" style="margin-top:3em;width: 100%" src="images/foundations_logo_no_vertical.png">
 
 
     <!-- <form class="login100-form validate-form">
