Testing event URLs

--- a/8_17_19.html
+++ b/8_17_19.html
@@ -47,7 +47,7 @@
 
          <input class="input100" name="entry.877086558" type="text" placeholder="Your UNI" />
 
-         <input name="entry.54220057" type="hidden" value="{{ event_id }}">
+         <input name="entry.54220057" type="hidden" value="Python User Group, August">
 
 	 <span class="focus-input100"></span>
 				</div>
