--- a/intro_linux_fall_2019.html
+++ b/intro_linux_fall_2019.html
@@ -33,7 +33,7 @@
 	<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
 		<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
      <script type="text/javascript">var submitted=false;</script>
-     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='submitted.html';}"></iframe>
+     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='submitted.html#test=foo';}"></iframe>
 
      <form class="login100-form validate-form" action="https://docs.google.com/forms/d/e/1FAIpQLScmX5eUbPcoZjEUpJIiXj1LfOHzSvVjHFc_XMmkabgUj-CiRw/formResponse" method="post" target="hidden_iframe"
 	       onsubmit="submitted=true;">
