--- a/pug-3.html
+++ b/pug-3.html
@@ -47,7 +47,7 @@
 
          <input class="input100" autocomplete="off" name="entry.877086558" type="text" placeholder="Your UNI" />
 
-         <input name="entry.54220057" type="hidden" value="Text Analaysis I">
+         <input name="entry.54220057" type="hidden" value="Python User Group: Pandas - the Bare Basics">
 
 	 <span class="focus-input100"></span>
 				</div>
